change layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ button {
     @apply bg-gray-400;
   }
   &.extrasmall {
-    @apply px-2 py-[4px] text-white hover:bg-turquoise-500 hover:text-white rounded-none mb-2 block xl:hidden;
+    @apply px-2 py-[4px] text-white hover:bg-turquoise-500 hover:text-white rounded-none mb-2 block xl:hidden self-start;
   }
   &.small {
     @apply px-2 py-[9px];
